Add deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,34 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy
+
+permissions:
+  contents: write # 💡 gives GitHub Actions permission to push code
 
 on:
   push:
     branches:
-      - main
+      - main # or whatever your default branch is
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Node
+    - name: Setup Node
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: '18'
 
     - name: Install dependencies
       run: npm install
 
-    - name: Build the app
-      run: npm run build
+    - name: Build the project
+      run: npm run build # or vite build
 
-    - name: Deploy to gh-pages
+    - name: Deploy to GitHub Pages 🚀
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+        publish_dir: ./build # or ./dist based on your tool
