--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "@types/axios": "^0.14.4",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
