--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://bhargavi2520.github.io/SAMS",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
