--- a/frontend/.github/workflows/deploy.yml
+++ b/frontend/.github/workflows/deploy.yml
@@ -23,12 +23,14 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./frontend
 
     - name: Build the project
       run: npm run build # or vite build
+      working-directory: ./frontend
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+        publish_dir: ./frontend/build
