--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,63 @@
-name: Build and Deploy
-
-permissions:
-  contents: write # 💡 gives GitHub Actions permission to push code
+# Workflow for deploying the static site from the /frontend subdirectory
+name: Deploy Frontend to GitHub Pages
 
 on:
+  # Runs on pushes targeting the main branch
   push:
-    branches:
-      - main # or whatever your default branch is
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
+          # Cache npm packages from the correct directory
+          cache-dependency-path: frontend/package-lock.json
 
-    - name: Cache node modules
-      uses: actions/cache@v3
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
+      - name: Install dependencies
+        # IMPORTANT: Run commands inside the 'frontend' directory
+        working-directory: ./frontend
+        run: npm ci
 
-    - name: Install dependencies
-      run: npm install
-      working-directory: ./frontend
+      - name: Build static site
+        # IMPORTANT: Run the build command inside the 'frontend' directory
+        working-directory: ./frontend
+        run: npm run build # The base path is handled by your vite.config.js
 
-    - name: Build the project
-      run: npm run build # or vite build
-      working-directory: ./frontend
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # IMPORTANT: Upload from the correct build directory
+          path: './frontend/build'
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./frontend/build
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
