--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.10.2",
     "react-tooltip": "^5.29.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
