--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
